--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.2",
     "firebase": "^10.11.1",
     "primeicons": "^7.0.0",
     "primereact": "^10.6.3",
