--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "firebase": "^10.11.1",
     "primeicons": "^7.0.0",
     "primereact": "^10.6.3",
-    "quill": "^2.0.0",
+    "quill": "^2.0.2",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
     "react-datepicker": "^6.9.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.1.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
