--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.2",
     "firebase": "^10.11.1",
+    "jodit-react": "^4.1.2",
     "primeicons": "^7.0.0",
     "primereact": "^10.6.3",
     "quill": "^2.0.2",
