--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "chart.js": "^4.4.2",
     "firebase": "^10.11.1",
     "jodit-react": "^4.1.2",
+    "lodash": "^4.17.21",
     "primeicons": "^7.0.0",
     "primereact": "^10.6.3",
     "quill": "^2.0.2",
