--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@faker-js/faker": "^8.4.1",
     "@firebase/auth": "^1.7.2",
     "@fortawesome/fontawesome-free": "^6.6.0",
     "@react-spring/web": "^9.7.3",
