--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dompurify": "^3.1.6",
     "firebase": "^10.11.1",
     "jodit-react": "^4.1.2",
+    "leaflet": "^1.9.4",
     "lodash": "^4.17.21",
     "primeicons": "^7.0.0",
     "primereact": "^10.6.3",
@@ -25,6 +26,7 @@
     "react-datepicker": "^6.9.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.1.0",
+    "react-leaflet": "^4.2.1",
     "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.0",
