--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "chart.js": "^4.4.2",
     "dompurify": "^3.1.6",
     "firebase": "^10.11.1",
+    "framer-motion": "^11.5.4",
     "jodit-react": "^4.1.2",
     "leaflet": "^1.9.4",
     "lodash": "^4.17.21",
