--- a/package.json
+++ b/package.json
@@ -3,37 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@faker-js/faker": "^8.4.1",
-    "@firebase/auth": "^1.7.2",
-    "@fortawesome/fontawesome-free": "^6.6.0",
-    "@react-spring/web": "^9.7.3",
-    "@reduxjs/toolkit": "^2.2.7",
+    "@emailjs/browser": "^4.4.1",
+    "@firebase/auth": "^1.7.9",
+    "@reduxjs/toolkit": "^2.2.8",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.3",
-    "chart.js": "^4.4.2",
-    "dompurify": "^3.1.6",
-    "firebase": "^10.11.1",
-    "framer-motion": "^11.5.4",
-    "jodit-react": "^4.1.2",
-    "leaflet": "^1.9.4",
-    "lodash": "^4.17.21",
+    "firebase": "^10.14.1",
+    "framer-motion": "^11.11.8",
     "primeicons": "^7.0.0",
-    "primereact": "^10.6.3",
-    "quill": "^2.0.2",
+    "primereact": "^10.8.4",
     "react": "^18.3.1",
-    "react-bootstrap": "^2.10.2",
-    "react-datepicker": "^6.9.0",
+    "react-bootstrap": "^2.10.5",
+    "react-content-loader": "^7.0.2",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.1.0",
-    "react-leaflet": "^4.2.1",
-    "react-quill": "^2.0.0",
+    "react-icons": "^5.3.0",
+    "react-lazy-load-image-component": "^1.6.2",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.23.0",
+    "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
-    "styled-components": "^6.1.12",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
