--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.3",
+    "dompurify": "^3.1.7",
     "firebase": "^10.14.1",
     "framer-motion": "^11.11.8",
+    "jodit-react": "^4.1.2",
+    "lucide-react": "^0.452.0",
     "primeicons": "^7.0.0",
     "primereact": "^10.8.4",
     "react": "^18.3.1",
